# Socially

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  runapi.py
Api/: app.py  main.py
Database/: __init__.py  database.py
Website/: index.html
api/: main.py
app/: main.py
